0.9.27
Add Settings Widget

0.9.26
Merge marduk's musicvideo search code
Update videoinfo to use musicinfo for musicvideos
Hide season view episodes if container is updating

0.9.25
Increase total widget limit to 50
Add title to lovefilm

0.9.24
Add landscape art and only fallback to clearlogo

0.9.23
Add hint arrows to extendedinfo dialogs
Add option to change autoscroll and timerperimage
Bump up size of topbar icons slightly (60px -> 70px)
Option for square artist image on music osd

0.9.22
Add hint arrows to info dialogs
Add icon mode to simple home
Add top250 skinhelper to tvshows/movies
Fix for list view years slide
Add new artwork osd

0.9.21
Add sdtv and hd-dvd flags
Add caps fonts for Greek all-caps fix
Support for listitem helper in showcase view (others coming soon)
Add filepath in filebrowser
Add ratings selector

0.9.20
Fix animation bounce
Add icons for multiwidget layouts

0.9.19
Clean-up in-built game support

0.9.18
Fix clearlogo on home issues
Add tracknaming template option in skinsettings > library
Add use standard labels instead of titles in skinsettings > library
Change skinsetting strings to be more humanistic by adding verbs (use, apply, enable, choose, customise, display, etc.)
Update alphabet strip to skip to next/prev letter

0.9.17
Fix subtitles/audio/video settings dialog not hiding when offset slider is visible
Add add-ons to search dialog
Add global home fallback image

0.9.16
Fix for YouTube lists (and other addon lists) to only show when addon is installed
Update busy spinner in local library info search
Fix 1136 local library info search fanart jumpiness
Some other fixes for local library info search
Disable library info search for tvshows/episodes
Fix for showcase slide over with parentfolder items

0.9.15
Fix clearlogo to show in appropriate sections
Fix for widgetcontainer not clearing

0.9.14
Fix notification dialog
Fix minimal busy loader overlapping now playing when starting a movie