@@ -1,5 +1,6 @@
 0.9.27
 Add Settings Widget
+Add prefer poster for blur setting
 
 0.9.26
 Merge marduk's musicvideo search code
